Deploying the CEED website with mkdocs, version 0.17.4

--- a/index.html
+++ b/index.html
@@ -345,10 +345,10 @@ The CEED software will also include optimized assembly support for low-order met
 <div class="bs-sidebar hidden-print well" role="complementary">
     <ul class="nav bs-sidenav">
     <li class="main"><a href="../news/">What's New?</a> </li>
-       <li> <a href="http://ceed.exascaleproject.org/ceed2am/">&#9658;&nbsp;CEED2AM in Boulder</a> </li>
+       <li> <a href="./news/#ceed-milestone-reports-publicly-available">&#9658;&nbsp;CEED reports available</a> </li>
        <li> <a href="./news/#software-release-libparanumal-v010">&#9658;&nbsp;libParanumal v0.1 released&nbsp;<span class="label label-primary">New</span></a> </li>
        <li> <a href="http://ceed.exascaleproject.org/fms/">&#9658;&nbsp;FMS v0.1 released&nbsp;<span class="label label-primary">New</span></a> </li>
-       <li> <a href="../news/#software-release-occa-v10">&#9658;&nbsp;OCCA v1.0 released&nbsp;<span class="label label-primary">New</span></a> </li>
+       <li> <a href="../news/#software-release-occa-v10">&#9658;&nbsp;OCCA v1.0 released</a> </li>
        <li> <a href="../news/#software-release-mfem-v33">&#9658;&nbsp;MFEM v3.4 released</a> </li>
        <li> <a href="../news/#software-release-ceed-v10">&#9658;&nbsp;CEED v1.0 released</a> </li>
        <li> <a href="../news/#software-release-libceed-v02">&#9658;&nbsp;libCEED v0.2 released</a> </li>
