--- a/pubs/index.html
+++ b/pubs/index.html
@@ -315,6 +315,12 @@
 <hr />
 <h3 id="ceed-documents">CEED Documents</h3>
 <ul>
+<li><a href="../docs/ceed-ms1-report.pdf">CEED-MS1 report</a>: Engage first wave ECP/CEED applications.</li>
+<li><a href="../docs/ceed-ms6-report.pdf">CEED-MS6 report</a>: Identify initial kernels, bake-off (benchmark) problems and miniapps.</li>
+<li><a href="../docs/ceed-ms8-report.pdf">CEED-MS8 report</a>: Initial integration of CEED software in ECP applications.</li>
+<li><a href="../docs/ceed-ms10-report.pdf">CEED-MS10 report</a>: Initial CEED API.</li>
+<li><a href="../docs/ceed-ms13-report.pdf">CEED-MS13 report</a>: Public release of CEED 1.0.</li>
+<li><a href="../docs/ceed-ms18-report.pdf">CEED-MS18 report</a>: Propose high-order mesh/data format.</li>
 <li>CEED's high-order <a href="../bps/">Benchmarks</a> and <a href="../miniapps/">Miniapps</a>.</li>
 <li>Activities in the <a href="../ap/">Applications</a>, <a href="../hw/">Hardware</a>, <a href="../sw/">Software</a> and <a href="../fe/">Finite Element</a> thrusts.</li>
 <li>CEED-proposed high-order <a href="../discr/#efficient-high-order-operator-format-wzxhzdk1">Operator</a> and <a href="../vis/">Visualization</a> formats.</li>
