--- a/index.html
+++ b/index.html
@@ -427,6 +427,7 @@ The CEED software will also include optimized assembly support for low-order met
         <script src="./js/highlight.pack.js"></script>
         <script src="./js/base.js"></script>
         <script src="./js/retina.min.js"></script>
-        <script src="search/main.js"></script>
+        <script src="./search/require.js"></script>
+        <script src="./search/search.js"></script>
     </body>
 </html>
