Deploying the CEED website with mkdocs, version 0.17.4

--- a/about/index.html
+++ b/about/index.html
@@ -328,6 +328,7 @@ in support of the nation’s <a href="https://obamawhitehouse.archives.gov/the-p
 <li><a href="http://www.mcs.anl.gov/person/aleksandr-obabko">Aleks Obabko</a></li>
 <li><a href="https://scholar.google.com/citations?user=NTTnGlYAAAAJ&amp;hl=de">Ali Karakus</a></li>
 <li><a href="http://www.mcs.anl.gov/person/andrew-siegel">Andrew Siegel</a></li>
+<li><a href="https://www.anl.gov/profile/anthony-patrick-austin">Anthony Austin</a></li>
 <li><a href="http://www.mcs.anl.gov/person/barry-smith">Barry Smith</a></li>
 <li><a href="https://www.scorec.rpi.edu/~cwsmith/">Cameron Smith</a></li>
 <li><a href="https://people.llnl.gov/beckingsale1">David Beckingsale</a></li>
