Deploying the CEED website with mkdocs, version 0.17.4

--- a/about/index.html
+++ b/about/index.html
@@ -335,10 +335,11 @@ in support of the nation’s <a href="https://obamawhitehouse.archives.gov/the-p
 <li><a href="http://dsmedina.com/#/projects">David Medina</a></li>
 <li><a href="https://www.researchgate.net/profile/Ian_Karlin">Ian Karlin</a></li>
 <li><a href="http://www.netlib.org/utk/people/JackDongarra/">Jack Dongarra</a> &mdash; Lead for the <a href="../sw/">Hardware</a> thrust</li>
+<li><a href="https://www.linkedin.com/in/jean-sylvain-camier-45863385">Jean-Sylvain Camier</a></li>
 <li><a href="https://jedbrown.org/">Jed Brown</a> &mdash; Lead for the <a href="../sw/">Software</a> thrust</li>
 <li><a href="http://www.mcs.anl.gov/person/katherine-heisey">Katie Heisey</a></li>
 <li><a href="https://github.com/KazemKamran">Kazem Kamran</a></li>
-<li><a href="http://faculty.rpi.edu/node/35899">Mark Shepard</a></li>
+<li><a href="http://faculty.rpi.edu/node/35899">Mark Shephard</a></li>
 <li><a href="http://www.mcs.anl.gov/person/matthew-otten">Matt Otten</a></li>
 <li><a href="http://www.mcs.anl.gov/~mmin">Misun Min</a> &mdash; Lead for the <a href="../ap/">Applications</a> thrust</li>
 <li><a href="https://people.llnl.gov/vassilevski1">Panayot Vassilevski</a></li>
