Deploying the CEED website with mkdocs, version 0.17.4

--- a/pubs/index.html
+++ b/pubs/index.html
@@ -322,6 +322,7 @@
 <li>CEED-MS13 report: <a href="../docs/ceed-ms13-report.pdf">Public release of CEED 1.0</a>.</li>
 <li>CEED-MS18 report: <a href="../docs/ceed-ms18-report.pdf">Propose high-order mesh/data format</a>.</li>
 <li>CEED-MS20 report: <a href="../docs/ceed-ms20-report.pdf">Performance tuning of CEED software and first wave apps</a>.</li>
+<li>CEED-MS23 report: <a href="../docs/ceed-ms23-report.pdf">Engage second wave ECP/CEED applications</a>.</li>
 <li>CEED's high-order <a href="../bps/">Benchmarks</a> and <a href="../miniapps/">Miniapps</a>.</li>
 <li>Activities in the <a href="../ap/">Applications</a>, <a href="../hw/">Hardware</a>, <a href="../sw/">Software</a> and <a href="../fe/">Finite Element</a> thrusts.</li>
 <li>CEED-proposed high-order <a href="../discr/#efficient-high-order-operator-format-wzxhzdk1">Operator</a> and <a href="../vis/">Visualization</a> formats.</li>
