Deploying the CEED website with mkdocs, version 0.17.4

--- a/pubs/index.html
+++ b/pubs/index.html
@@ -335,6 +335,11 @@
 </ul>
 <hr />
 <h3 id="publications">Publications</h3>
+<h4 id="2019">2019</h4>
+<ol>
+<li>I. Masliah, A. Abdelfattah, A. Haidar, S. Tomov, M. Baboulin, J. Falcou, and J Dongarra, <a href="https://www.sciencedirect.com/science/article/pii/S0167819118301091">Algorithms and optimization techniques for high-performance matrix-matrix multiplications of very small matrices</a>, Parallel Computing, vol. 81, pp. 1-21, <strong>2019</strong>.</li>
+</ol>
+<hr />
 <h4 id="2018">2018</h4>
 <ol>
 <li>P. Bello-Maldonado and P. Fischer, <a href="">Scalable Low-Order Finite Element Preconditioners for High-Order Spectral Element Poisson Solvers</a>, submitted, <strong>2018</strong>.</li>
