--- a/index.html
+++ b/index.html
@@ -351,13 +351,15 @@ The CEED software will also include optimized assembly support for low-order met
 <div class="bs-sidebar hidden-print well" role="complementary">
     <ul class="nav bs-sidenav">
     <li class="main"><a href="../news/">What's New?</a> </li>
-       <li> <a href="http://ceed.exascaleproject.org/ceed2am/">&#9658;&nbsp;CEED2AM in Boulder</a> </li>
-       <li> <a href="./news/#software-release-libparanumal-v010">&#9658;&nbsp;libParanumal v0.1 released&nbsp;<span class="label label-primary">New</span></a> </li>
-       <li> <a href="http://ceed.exascaleproject.org/fms/">&#9658;&nbsp;FMS v0.1 released&nbsp;<span class="label label-primary">New</span></a> </li>
-       <li> <a href="../news/#software-release-occa-v10">&#9658;&nbsp;OCCA v1.0 released&nbsp;<span class="label label-primary">New</span></a> </li>
+
+
+       <li> <a href="./news/#ceed-researchers-at-nahomcon19">&#9658;&nbsp;CEED @ NAHOMCon19</a> </li>
+       <li> <a href="./news/#software-release-laghos-20">&#9658;&nbsp;Laghos v2.0 released&nbsp;</a> </li>
+       <li> <a href="./news/#ceed-minisymposiums-at-siam-cse19">&#9658;&nbsp;CEED @ SIAM CSE19</a> </li>
+       <li> <a href="../news/#software-release-libceed-v03">&#9658;&nbsp;libCEED v0.3 released</a> </li>
+       <li> <a href="http://ceed.exascaleproject.org/fms/">&#9658;&nbsp;FMS v0.1 released</a> </li>
        <li> <a href="../news/#software-release-mfem-v33">&#9658;&nbsp;MFEM v3.4 released</a> </li>
        <li> <a href="../news/#software-release-ceed-v10">&#9658;&nbsp;CEED v1.0 released</a> </li>
-       <li> <a href="../news/#software-release-libceed-v02">&#9658;&nbsp;libCEED v0.2 released</a> </li>
        <li> <a href="../news/">More updates...</a> </li>
     <hr style="background-color:white; height:20px; margin-left:-1px;  margin-right:-1px; margin-top:15px; margin-bottom:10px " />
     <li class="main" style="padding:0"><a href="https://exascaleproject.org/exascale-computing-project/">ECP Co-Design</a> </li>
