--- a/index.html
+++ b/index.html
@@ -358,6 +358,7 @@ The CEED software will also include optimized assembly support for low-order met
        <li> <a href="./news/#ceed-minisymposiums-at-siam-cse19">&#9658;&nbsp;CEED @ SIAM CSE19</a> </li>
        <li> <a href="../news/#software-release-libceed-v03">&#9658;&nbsp;libCEED v0.3 released</a> </li>
        <li> <a href="http://ceed.exascaleproject.org/fms/">&#9658;&nbsp;FMS v0.1 released</a> </li>
+       <li> <a href="../news/#ceed-researchers-at-atpesc18">&#9658;&nbsp;ATPESC2018 videos</a> </li>
        <li> <a href="../news/#software-release-mfem-v33">&#9658;&nbsp;MFEM v3.4 released</a> </li>
        <li> <a href="../news/#software-release-ceed-v10">&#9658;&nbsp;CEED v1.0 released</a> </li>
        <li> <a href="../news/">More updates...</a> </li>
