--- a/about/index.html
+++ b/about/index.html
@@ -343,8 +343,8 @@ in support of the nation’s <a href="https://obamawhitehouse.archives.gov/the-p
 <li><a href="http://www.netlib.org/utk/people/JackDongarra/">Jack Dongarra</a> &mdash; Lead for the <a href="../sw/">Hardware</a> thrust</li>
 <li><a href="https://www.linkedin.com/in/jean-sylvain-camier-45863385">Jean-Sylvain Camier</a></li>
 <li><a href="https://jedbrown.org/">Jed Brown</a> &mdash; Lead for the <a href="../sw/">Software</a> thrust</li>
+<li><a href="https://www.linkedin.com/in/jeremylukethompson">Jeremy Thompson</a></li>
 <li><a href="http://www.mcs.anl.gov/person/katherine-heisey">Katie Heisey</a></li>
-<li><a href="https://github.com/KazemKamran">Kazem Kamran</a></li>
 <li><a href="http://faculty.rpi.edu/node/35899">Mark Shephard</a></li>
 <li><a href="http://www.mcs.anl.gov/person/matthew-otten">Matt Otten</a></li>
 <li><a href="http://www.mcs.anl.gov/~mmin">Misun Min</a> &mdash; Lead for the <a href="../ap/">Applications</a> thrust</li>
@@ -370,6 +370,7 @@ in support of the nation’s <a href="https://obamawhitehouse.archives.gov/the-p
 <ul>
 <li><a href="http://www.icl.utk.edu/~haidar/">Azzam Haidar</a></li>
 <li><a href="https://www.nrel.gov/research/kasia-swirydowicz.html">Kasia Swirydowicz</a></li>
+<li><a href="https://github.com/KazemKamran">Kazem Kamran</a></li>
 <li><a href="https://www.math.vt.edu/people/nchalmer/">Noel Chalmers</a></li>
 <li><a href="https://web.stanford.edu/~tym1/">Tim Moon</a></li>
 </ul>
