Deploying the CEED website with mkdocs, version 0.17.4

--- a/ceed-2.0/index.html
+++ b/ceed-2.0/index.html
@@ -651,9 +651,9 @@ find useful:</p>
 <li>
 <p>Spack is a set of Python scripts so there is nothing to install!
   Just download with <code>git clone https://github.com/spack/spack.git</code> and add
-  <code>spack/bin</code> to your path with the following commands:<br>
-  <code>. share/spack/setup-env.sh</code> for <code>bash</code>/<code>zsh</code> or <br>
-  <code>setenv SPACK_ROOT</code>pwd<code>; source $SPACK_ROOT/share/spack/setup-env.csh</code>
+  <code>spack/bin</code> to your path with the following commands:
+  <code>. share/spack/setup-env.sh</code> for <code>bash</code>/<code>zsh</code> or
+  <code>setenv SPACK_ROOT `pwd`; source $SPACK_ROOT/share/spack/setup-env.csh</code>
   for <code>csh</code>/<code>tcsh</code>.</p>
 </li>
 <li>
