--- a/index.html
+++ b/index.html
@@ -355,14 +355,13 @@ The CEED software will also include optimized assembly support for low-order met
     <li class="main"><a href="../news/">What's New?</a> </li>
 
        <li> <a href="./news/#software-release-ceed-v20">&#9658;&nbsp;CEED v2.0 released</a> </li>
+       <li> <a href="./news/#software-release-libceed-v04">&#9658;&nbsp;libCEED-0.4 released</a> </li>
+       <li> <a href="./news/#laghos-cts-2-benchmark">&#9658;&nbsp;Laghos-CTS2 benchmark</a> </li>
        <li> <a href="./news/#ceed-researchers-at-nahomcon19">&#9658;&nbsp;CEED @ NAHOMCon19</a> </li>
-       <li> <a href="./news/#software-release-laghos-20">&#9658;&nbsp;Laghos v2.0 released&nbsp;</a> </li>
        <li> <a href="./news/#ceed-minisymposiums-at-siam-cse19">&#9658;&nbsp;CEED @ SIAM CSE19</a> </li>
-       <li> <a href="../news/#software-release-libceed-v03">&#9658;&nbsp;libCEED v0.3 released</a> </li>
        <li> <a href="http://ceed.exascaleproject.org/fms/">&#9658;&nbsp;FMS v0.1 released</a> </li>
        <li> <a href="../news/#ceed-researchers-at-atpesc18">&#9658;&nbsp;ATPESC2018 videos</a> </li>
        <li> <a href="../news/#software-release-mfem-v33">&#9658;&nbsp;MFEM v3.4 released</a> </li>
-       <li> <a href="../news/#software-release-ceed-v10">&#9658;&nbsp;CEED v1.0 released</a> </li>
        <li> <a href="../news/">More updates...</a> </li>
     <hr style="background-color:white; height:20px; margin-left:-1px;  margin-right:-1px; margin-top:15px; margin-bottom:10px " />
     <li class="main" style="padding:0"><a href="https://exascaleproject.org/exascale-computing-project/">ECP Co-Design</a> </li>
