Deploying the CEED website with mkdocs, version 1.0.4 from /usr/lib/python3.7/site-packages/mkdocs (Python 3.7)

--- a/pubs/index.html
+++ b/pubs/index.html
@@ -366,7 +366,7 @@
 </li>
 <li>
 <p>CEED-MS25 report: <a href="../docs/ceed-ms25-report.pdf">Public release of CEED 2.0</a>.
-<a href="https://10.5281/zenodo.2641316"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2641316.svg" class="doi"></a></p>
+<a href="https://doi.org/10.5281/zenodo.2641316"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2641316.svg" class="doi"></a></p>
 </li>
 </ul>
 <hr />
