Deploying the CEED website with mkdocs, version 1.0.4 from /home/aaustin/.local/lib64/python2.7/site-packages/mkdocs (Python 2.7)

--- a/404.html
+++ b/404.html
@@ -181,6 +181,10 @@
 <li >
     <a href="ceed2am/">_CEED2AM</a>
 </li>
+                                    
+<li >
+    <a href="ceed3am/">_CEED3AM</a>
+</li>
                                 </ul>
                             </li>
                             <li >
@@ -220,7 +224,7 @@
         </footer>
         <script>
             var base_url = "",
-                shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
+                shortcuts = {"search": 83, "next": 78, "help": 191, "previous": 80};
         </script>
         <script src="js/base.js" defer></script>
         <script src="search/main.js" defer></script>
